Bug 307723 - plot anyhow created from the wizard when no plot is selected
Summary: plot anyhow created from the wizard when no plot is selected
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.7
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-02 13:19 UTC by Grégoire Verlut
Modified: 2014-06-02 22:47 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grégoire Verlut 2012-10-02 13:19:43 UTC
When loading a datafile from the wizard, kst creates a plot even if no plot were selected in the third screen.

Reproducible: Always
Comment 1 Nicolas Brisset 2012-10-05 21:23:26 UTC
I don't see the problem here using today's svn.
Which version are you using?
Comment 2 Netterfield 2012-10-11 01:40:45 UTC
Fixed in svn.
Comment 3 david.mcminn 2013-09-19 11:08:02 UTC
I'm still seeing this behaviour with the 2.0.7 release.
Comment 4 Peter Kümmel 2013-09-25 19:57:03 UTC
It creates the x/y axes, but now curve.
It should also suppress the axes.
Comment 5 Netterfield 2014-06-02 22:47:47 UTC
Git commit 1bd158313d9e9b68b49115645ffe364370638ed2 by Barth Netterfield.
Committed on 02/06/2014 at 22:46.
Pushed by netterfield into branch 'master'.

In datawizard, don't create plots if no curves.

M  +180  -179  src/libkstapp/datawizard.cpp

http://commits.kde.org/kst-plot/1bd158313d9e9b68b49115645ffe364370638ed2