In datawizard, don't create plots if no curves.

BUG: 307723